--- a/rain-projections/Cargo.toml
+++ b/rain-projections/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "rain-projections"
-version = "0.1.0"
+version = "1.0.0"
+authors = ["rainbing <cnrainbing@163.com>"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
