--- a/rain-repository/Cargo.toml
+++ b/rain-repository/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 [dependencies]
 rain-model = { path = "../rain-model" }
 rain-commands = { path = "../rain-commands" }
+rain-queries = { path = "../rain-queries" }
 anyhow = "1.0.55"
 async-trait = "0.1.52"
 # tokio + rustls [runtime-async-std-native-tls or runtime-tokio-native-tls or runtime-actix-native-tls]
