--- a/rain-base/Cargo.toml
+++ b/rain-base/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.55"
 serde = "1.0.136"
 md5 = "0.7.0"
 sha2 = "0.10.2"
+actix-web = "4.0.1"
