--- a/rain-projections/Cargo.toml
+++ b/rain-projections/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rain-base = { path = "../rain-base" }
 rain-queries = { path = "../rain-queries" }
 rain-repository = { path = "../rain-repository" }
 rain-model = { path = "../rain-model" }
