--- a/rain-core/Cargo.toml
+++ b/rain-core/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rain-base"
+name = "rain-core"
 version = "1.0.0"
 authors = ["rainbing <cnrainbing@163.com>"]
 edition = "2021"
@@ -7,7 +7,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.55"
 serde = "1.0.136"
-md5 = "0.7.0"
-sha2 = "0.10.2"
+anyhow = "1.0.55"
+actix-web = "4.0.1"
