create add user address

--- a/rain-aggregates/Cargo.toml
+++ b/rain-aggregates/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2021"
 rain-model = { path = "../rain-model" }
 rain-repository = { path = "../rain-repository" }
 rain-commands = { path = "../rain-commands" }
+rain-core = { path = "../rain-core" }
 anyhow = "1.0.55"
 async-trait = "0.1.52"
 sqlx = { version = "0.5.11", features = ["runtime-tokio-native-tls", "mysql", "chrono","macros","uuid","json","bigdecimal","decimal"] }
